@@ -174,6 +174,10 @@ RELEASE 0.97 - XXX
     all of the normally-available global functions and variables by saying
     "from SCons.Script import *".
 
+  - Add a --debug=memoizer option to print Memoizer hit/mass statistics.
+
+  - Allow more than one --debug= option to be set at a time.
+
   From Wayne Lee:
 
   - Avoid "maximum recursion limit" errors when removing $(-$) pairs
